[package]
name = "dico"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
clap = { version = "3.0.6", features = ["derive"] }
directories = "4.0.1"
flume = "0.10.11"
reqwest = "0.11.9"
rusqlite = { version = "0.26.3", features = ["bundled"] }
yaml-rust = "0.4.5"
